# project-info

./: README.md  pyproject.toml  scan.py
scanner/: formats.py  ignores.py  scanner.py  types.py
